k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api
  namespace: fraud-detection

spec:
  selector:
    app: fraud-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
